--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "todolistapi",
   "version": "1.0.0",
   "description": "RESTful todoListAPI",
-  "main": "index.js",
+  "main": "src/worker.js",
   "scripts": {
+    "start": "node src/server.js",
+    "build": "babel src --out-dir lib",
+    "worker": "rm -rf lib && npm run build && cross-env LOCAL=true AWS_REGION=eu-west-1 node lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,10 +23,16 @@
   },
   "homepage": "https://github.com/MrLPager/todoListAPI#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.363.0",
     "body-parser": "^1.18.3",
+    "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.5"
   }
