--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-	"plugins": [ "transform-object-rest-spread" ]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
