--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "aws-sdk": "^2.363.0",
+    "aws-sdk": "^2.364.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
