--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "RESTful todoListAPI",
   "main": "src/dev.js",
   "scripts": {
-    "start": "node lib/server.js",
+    "start": "cross-env LOCAL=true AWS_REGION=eu-west-1 node lib/server.js",
     "build": "babel src --out-dir lib",
     "dev": "rm -rf lib && npm run build && cross-env LOCAL=true AWS_REGION=eu-west-1 node lib/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/** --fix",
+    "test": "jest src",
+    "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "eslint": "^5.9.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
@@ -34,7 +40,8 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.5"
+    "uuid": "^3.3.2"
   }
 }
