--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "RESTful todoListAPI",
   "main": "src/dev.js",
   "scripts": {
-    "start": "cross-env LOCAL=true AWS_REGION=eu-west-1 node lib/server.js",
+    "start": "cross-env TODOLIST_STAGE=prod AWS_REGION=eu-west-1 node lib/server.js",
     "build": "babel src --out-dir lib",
-    "dev": "rm -rf lib && npm run build && cross-env LOCAL=true AWS_REGION=eu-west-1 node lib/server.js",
-    "lint": "eslint src/** --fix",
-    "test": "jest src",
+    "dev": "rm -rf lib && npm run build && cross-env TODOLIST_STAGE=dev AWS_REGION=eu-west-1 node lib/server.js",
+    "lint": "eslint src/** config/** test/** --fix",
+    "test": "cross-env TODOLIST_STAGE=test AWS_REGION=eu-west-1 jest ./test/",
     "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
   },
   "repository": {
