--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir lib",
     "dev": "rm -rf lib && npm run build && cross-env TODOLIST_STAGE=dev AWS_REGION=eu-west-1 node lib/server.js",
     "lint": "eslint src/** config/** test/** --fix",
-    "test": "cross-env TODOLIST_STAGE=test AWS_REGION=eu-west-1 jest ./test/",
+    "test": "./test.sh",
     "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
   },
   "repository": {
