--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: "3"
+version: "3.6"
 
 services:
   app:
     build: .
-    env_file: .env
     ports:
       - '3000:3000'
+    environment:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_REGION
+    command: npm run compose-dev
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
     networks: 
