--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env TODOLIST_STAGE=prod AWS_REGION=eu-west-1 node lib/server.js",
     "build": "babel src --out-dir lib",
-    "dev": "rm -rf lib && npm run build && cross-env TODOLIST_STAGE=dev AWS_REGION=eu-west-1 node lib/server.js",
+    "dev": "rm -rf lib && npm run build && cross-env TODOLIST_STAGE=dev AWS_ACCESS_KEY_ID=fakeAccessKey AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey AWS_REGION=eu-west-1 node lib/server.js",
+    "compose-dev": "rm -rf lib && npm run build && cross-env TODOLIST_STAGE=composeDev AWS_ACCESS_KEY_ID=fakeAccessKey AWS_SECRET_ACCESS_KEY=fakeSecretAccessKey AWS_REGION=eu-west-1 node lib/server.js",
     "lint": "eslint src/** config/** test/** --fix",
     "test": "./test.sh",
     "coverage": "jest --collectCoverageFrom=src/**.js --coverage src"
